// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup size 1`] = `
<div
  class="t-button-group"
  role="group"
>
  <button
    class="t-button t-button--type-default t--size-sm t-button--icon-l"
  />
  <button
    class="t-button t-button--type-default t--size-sm t-button--icon-l"
  />
</div>
`;

exports[`ButtonGroup size 2`] = `
<div
  class="t-button-group"
  role="group"
>
  <button
    class="t-button t-button--type-default t--size-lg t-button--icon-l"
  />
  <button
    class="t-button t-button--type-default t--size-lg t-button--icon-l"
  />
</div>
`;
